--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <hr>
 <center><a HREF="https://www.behance.net/mmdd6"> 
- 	<img src="GitHub/deepakmolet.github.io/Imatges/Logo.png" width="100" height="50">
+ 	<img src="Imatges/Logo.png" width="100" height="50">
  </a>
 <a HREF="https://www.instagram.com/"> 
  	<img src="imatges/instagram.png" width="50" height="50">
