--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<br>
 <center>
-	<img src="imatges/rotoscopia.gif" width="300" height="300">
+	<img src="deepakmolet.github.io/Imatges/rotoscopia.gif" width="300" height="300">
 </center>
 
 
@@ -39,12 +39,12 @@
  	<img src="deepakmolet.github.io/Imatges/Logo.png" width="100" height="50">
  </a>
 <a HREF="https://www.instagram.com/"> 
- 	<img src="imatges/instagram.png" width="50" height="50">
+ 	<img src="deepakmolet.github.io/Imatges/instagram.png" width="50" height="50">
  </a></center>
 
 <footer>
    <center><p>Posted by: Deepak Molet</p> <center>
-   <img src="imatges/xavier.jpg" width="100" height="100">
+   <img src="deepakmolet.github.io/Imatges/xavier.jpg" width="100" height="100">
  </footer>
 
 	</body>
