--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
 <hr>
 <center><a HREF="https://www.behance.net/mmdd6"> 
- 	<img src="deepakmolet.github.io/Imatges/Logo.png" width="100" height="50">
+ 	<img src="Imatges/Logo.png" width="100" height="50">
  </a>
 <a HREF="https://www.instagram.com/"> 
- 	<img src="deepakmolet.github.io/Imatges/instagram.png" width="50" height="50">
+ 	<img src="Imatges/instagram.png" width="50" height="50">
  </a></center>
 
 <footer>
    <center><p>Posted by: Deepak Molet</p> <center>
-   <img src="deepakmolet.github.io/Imatges/xavier.jpg" width="100" height="100">
+   <img src="Imatges/xavier.jpg" width="100" height="100">
  </footer>
 
 	</body>
