--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<header>
 	 <center><h1>Deepak Molet</h1></center>
-	 <center><img src="imatges/dragon01.svg" width="80" height="80"></center>
+	 <center><img src="Imatges/dragon01.svg" width="80" height="80"></center>
 		</header>
 
 <p>
@@ -29,14 +29,14 @@
 
 		<br>
 <center>
-	<img src="rotoscopia.gif" width="300" height="300">
+	<img src="Imatges/rotoscopia.gif" width="300" height="300">
 </center>
 
 
 
 <hr>
 <center><a HREF="https://www.behance.net/mmdd6"> 
- 	<img src="deepakmolet.github.io/Imatges/Logo.png" width="100" height="50">
+ 	<img src="Imatges/Logo.png" width="100" height="50">
  </a>
 <a HREF="https://www.instagram.com/"> 
  	<img src="Imatges/instagram.png" width="50" height="50">
