--- a/index.html
+++ b/index.html
@@ -1,51 +1,120 @@
+<!DOCTYPE html>
 <html>
-	<head>
+<head>
+  <meta charset="utf-8">
+  <title>Pagina web DeepakMolet</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,600;1,300&family=Roboto+Slab:wght@300;400;500&display=swap" rel="stylesheet">
+</head>
 
-		<section><title> Portafoli inicial</title></section>
-	</head>
+<body>
+  
+  <header class="header" id="inicio"> 
+<img src="img/menu.svg" alt="" class="menu">
+<nav class= "menu-navegacion">
+<a href="#Inicio">Inici</a>
+<a href="#De mi">Sobre mi</a>
+<a href="#Gallery">Gallery</a>
+<a href="#Aplicaciones">Aplicaciones</a>
+<a href="#Contacto">Contacta</a>
+</nav>
 
-	<body style="background-color: lightskyblue;">
+<div class="contenedor head" >
+  <h1 class="titulo" id="Inicio" >W E L C O M E</h1>
+  <p class="copy">Holaaa gente de YT </p>
+</div>
+</header>
 
-		<header>
-	 <center><h1>Deepak Molet</h1></center>
-	 <center><img src="Imatges/dragon01.svg" width="80" height="80"></center>
-		</header>
+<main>
+  <section class="contenedor" id="servicio">
+ <h2 class="subtitul" id="De mi">Sobre Mi</h2>
+ <div class="contenedor-servicio">
+    <img src="img/Isometric.svg" alt="">
+    <div class="Isometric-servicio">
+      <div class="service">
+        <h3 class="n-service">Me presento</h3>
+        <p>Hola, soy en Deepak Molet Masoliver, estudiante de grado superior de animación 3D, videojuegos y entornos interactivos.
+<br>
+        Esta es mi página de presentación y podrán ver un pedazo de mis trabajos, espero que les guste.</p>
 
-<p>
- Sóc en Deepak Molet, estic estudiant animacions 3D, jocs i Entorns Interactius, en carra estic al primer any.<br>
- <br>
+      </div>
+    </div>
+  </div>
+</section>
 
+
+<main>
+<section class="servicio contenedor" id="servicio"></section>
+<section class="gallery" id="trabajos">
+<div class="contenedor">
+  <h2 class="subtitul"  id="Gallery">Galeria</h2>
+  <div class="contenedor-galeria">
+    <img src="img/PapaNoel.png" alt="" class="img-galeria">
+    <img src="img/valki.jpg" alt="" class="img-galeria">
+    <img src="img/noche.png" alt="" class="img-galeria">
+    <img src="img/retroscopia_1.gif" alt="" class="img-galeria">
+    <img src="img/img3.jpg" alt="" class="img-galeria">
+    <img src="img/img3.jpg" alt="" class="img-galeria">
+  </div>
+</div>
+</section>
+
+<section class="imagen-light">
+<img src="img/cruz.svg" alt="" class="close">
+<img src="img/img1.jpg" alt="" class="agregar-imagen">
+
+</section> 
+
+<section class="contenedor" id="experto">
+<h2 class="subtitul" id="Aplicaciones">Aplicaciones</h2>
+<section class="experto"> 
+  <div class="cont-expert"> 
+    <img src="img/Maya.svg" alt="">
+    <h3 class="n-expert">Maya</h3>
+  </div>
+   <div class="cont-expert"> 
+    <img src="img/HTML.svg" alt="">
+    <h3 class="n-expert">HTML</h3>
+  </div>
+   <div class="cont-expert"> 
+    <img src="img/Adobe.svg" alt="">
+    <h3 class="n-expert">Adobe</h3>
+  </div>
+  </div>
+</section>
+</section>
+</main>
+
+<footer id="contacto">
+  <div class="contenidor footer-content">
+    <div class="contact -us">
+      <h2 class="brand" id="Contacto"> Deepak Molet</h2>
+      <p>Gracias por mirar mi web</p>
+    </div>
+
+    <div class="social-media">
+      <a href="https://twitter.com/Troide2" class="social-media-icon">
+        <i class='bx bxl-twitter'></i>
+      </a>
+      <a href="" class="social-media-icon">
+        <i class='bx bxl-instagram-alt' ></i>
+      </a>
+      <a href="https://www.google.com/intl/es/gmail/about/" class="social-media-icon">
+        <i class='bx bxl-gmail'></i>
+      </a>
+    </div>
+  </div>
  
-
-</p>
-<ol>
-<h3>Programes utilitzats:</h3>
-<li>Adobe extensions(photoshop....)</li>
-<li>zbrush</li>
-<li>Autodesk Maya</li>
-</ol>
-<hr>
+ <div class="line"> <br> <p class="text22"> Copyright © 2022</p></div>   
 
 
-		<br>
-<center>
-	<img src="Imatges/rotoscopia.gif" width="300" height="300">
-</center>
+</footer>
 
 
-
-<hr>
-<center><a HREF="https://www.behance.net/mmdd6"> 
- 	<img src="Imatges/Logo.png" width="100" height="50">
- </a>
-<a HREF="https://www.instagram.com/"> 
- 	<img src="Imatges/instagram.png" width="50" height="50">
- </a></center>
-
-<footer>
-   <center><p>Posted by: Deepak Molet</p> <center>
-   <img src="Imatges/xavier.jpg" width="100" height="100">
- </footer>
-
-	</body>
+<script src="js/menu.js" ></script>
+<script src="js/lightbox.js"></script>
+</body>
 </html>
