--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <img src="img/valki.jpg" alt="" class="img-galeria">
     <img src="img/noche.png" alt="" class="img-galeria">
     <img src="img/retroscopia_1.gif" alt="" class="img-galeria">
-    <img src="img/img3.jpg" alt="" class="img-galeria">
-    <img src="img/img3.jpg" alt="" class="img-galeria">
+    <img src="img/silla.gif" alt="" class="img-galeria">
+    <img src="img/Espada1.gif" alt="" class="img-galeria">
   </div>
 </div>
 </section>
