--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="contenedor head" >
   <h1 class="titulo" id="Inicio" >W E L C O M E</h1>
-  <p class="copy">Holaaa gente de YT </p>
+  <p class="copy"> my web </p>
 </div>
 </header>
 
@@ -99,7 +99,7 @@
       <a href="https://twitter.com/Troide2" class="social-media-icon">
         <i class='bx bxl-twitter'></i>
       </a>
-      <a href="" class="social-media-icon">
+      <a href="https://www.instagram.com/tro_ide/" class="social-media-icon">
         <i class='bx bxl-instagram-alt' ></i>
       </a>
       <a href="https://www.google.com/intl/es/gmail/about/" class="social-media-icon">
