--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <div class="contact -us">
       <h2 class="brand" id="Contacto"> Deepak Molet</h2>
       <p>Gracias por mirar mi web</p>
+      <p>deepakmolet.m@gmail.com</p>
     </div>
 
     <div class="social-media">
