--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
   <div class="contenidor footer-content">
     <div class="contact -us">
       <h2 class="brand" id="Contacto"> Deepak Molet</h2>
-      <p>Gracias por mirar mi web</p>
-      <p class="text2">deepakmolet.m@gmail.com</p>
+      <p>deepakmolet.m@gmail.com</p>
     </div>
 
     <div class="social-media">
